# spoilers

./: .gitignore  Cargo.toml  README.md  build.rs  deny.toml  flake.nix
src/: gui.rs  lib.rs  main.rs  test.rs  translator.rs
src/adapter/: flores-200.toml  mod.rs  nllb.rs
src/ctranslate2/: mod.rs  wrapper.c  wrapper.h
src/model/: mod.rs
