[package]
name = "spoilers"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"

[[bin]]
name = "spoilers"
required-features = [ "app" ]

[build-dependencies]
cxx-build = "*"

[dependencies]
anyhow = "*"
cxx = "*"
eframe = { version = "*", features = [ "persistence" ], optional = true }
egui = { version = "*", optional = true }
egui_commonmark = { version = "*", optional = true }
ocrs = { version = "*", optional = true }
once_cell = "*"
rten = { version = "*", optional = true }
serde = { version = "*", features = [ "derive" ] }
strum = { version = "*", features = [ "derive" ] }
text-splitter = { version = "*", features = [ "tokenizers" ] }
tokenizers = { version = "*", features = [ "http" ] }
toml = "*"
xcap = { version = "*", optional = true }

[features]
app = [ "eframe", "egui", "egui_commonmark" ]
default = [ "app" ]
