[package]
name = "spoilers"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
description = "High-level Rust bindings for CTranslate2"

[[bin]]
name = "spoilers"
required-features = [ "app" ]

[build-dependencies]
cxx-build = "1"

[dependencies]
anyhow = "1"
cxx = "1"
eframe = { version = "0", features = [ "persistence" ], optional = true }
egui = { version = "0", optional = true }
egui_commonmark = { version = "0", optional = true }
ocrs = { version = "0", optional = true }
once_cell = "1"
rten = { version = "0", optional = true }
serde = { version = "1", features = [ "derive" ] }
strum = { version = "0", features = [ "derive" ] }
text-splitter = { version = "0", features = [ "tokenizers" ] }
tokenizers = { version = "0", features = [ "http" ] }
toml = "0"
xcap = { version = "0", optional = true }

[features]
app = [ "eframe", "egui", "egui_commonmark" ]
default = [ "app" ]
